chrome style plugin: Don't crash when checking class weight.

It's impossible to determine if an incomplete type has a trivial
destructor when counting the 'weight' of a class' fields, so check if
the type has a definition first.

BUG=595786

Review URL: https://codereview.chromium.org/1816283003

Cr-Commit-Position: refs/heads/master@{#382695}

Former-commit-id: e264c3e8bdfc81c21ad0248624e5f2d67007450a